# python-project-back

./: .env  .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0574b59acec9_create_products_table.py  0599aefe54a8_ipdate_reservations_table.py  50a83b91c220_update_sales_entity.py  6fc07a03e706_create_users_table.py  a9034076a9fb_add_date_to_credit_purchases.py  acd8c413ea8f_add_sales_entity.py  d86a11256fb9_create_reservations_table.py  daa8bd1f00ba_create_credit_accounts_and_purchases_.py
app/: config.py  crud.py  main.py  models.py  schemas.py
app/endpoints/: auth.py  products.py
